feat: 更新文件名

--- a/content/shopassistant/contact.html
+++ b/content/shopassistant/contact.html
@@ -43,9 +43,9 @@
 										<ul id="menu-main-menu" class="menu menu-main">
 											<li> <a href="../../index-shopassistant.html"><span>Home</span></a> </li>
 											<li> <a href="about.html"><span>About us</span></a> </li>
-											<li> <a href="services.html"><span>Services</span></a> </li>
-											<li> <a href="pricing.html"><span>Pricing</span></a> </li>
-											<li> <a href="blog.html"><span lang="menu_fifth"></span></a> </li>
+											<li> <a href="culture.html"><span>Services</span></a> </li>
+											<li> <a href="product.html"><span>Pricing</span></a> </li>
+											<li> <a href="team.html"><span lang="menu_fifth"></span></a> </li>
 											<li class="current-menu-item"> <a href="contact.html"><span lang="menu_sixth"></span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#" aria-label="Mobile menu"><i class="icon-menu-fine" aria-hidden="true"></i></a> </div>
@@ -298,9 +298,9 @@
 						<h6>Navigation</h6>
 						<ul>
 							<li> <a href="about.html" data-type="URL" data-id="about.html">Product</a> </li>
-							<li> <a href="services.html" data-type="URL" data-id="services.html">Security</a> </li>
-							<li> <a href="pricing.html" data-type="URL" data-id="pricing.html">Pricing</a> </li>
-							<li> <a href="blog.html" data-type="URL" data-id="blog.html">Blog</a> </li>
+							<li> <a href="culture.html" data-type="URL" data-id="culture.html">Security</a> </li>
+							<li> <a href="product.html" data-type="URL" data-id="product.html">Pricing</a> </li>
+							<li> <a href="team.html" data-type="URL" data-id="team.html">Blog</a> </li>
 							<li> <a href="contact.html" data-type="URL" data-id="contact.html">Contact</a> </li>
 						</ul>
 					</div>
