--- a/content/shopassistant/post copy.html
+++ b/content/shopassistant/post copy.html
@@ -97,13 +97,13 @@
                           <a href="about.html"><span lang="menu_second"></span></a>
                         </li>
                         <li>
-                          <a href="services.html"><span lang="menu_third"></span></a>
+                          <a href="culture.html"><span lang="menu_third"></span></a>
                         </li>
                         <li>
-                          <a href="pricing.html"><span lang="menu_fourth"></span></a>
+                          <a href="product.html"><span lang="menu_fourth"></span></a>
                         </li>
                         <li class="current-menu-item">
-                          <a href="blog.html"><span lang="menu_fifth"></span></a>
+                          <a href="team.html"><span lang="menu_fifth"></span></a>
                         </li>
                         <li>
                           <a href="contact.html"><span lang="menu_sixth"></span></a>
@@ -945,19 +945,19 @@
                 </li>
                 <li>
                   <a
-                    href="services.html"
+                    href="culture.html"
                     data-type="URL"
-                    data-id="services.html"
+                    data-id="culture.html"
                     >Security</a
                   >
                 </li>
                 <li>
-                  <a href="pricing.html" data-type="URL" data-id="pricing.html"
+                  <a href="product.html" data-type="URL" data-id="product.html"
                     >Pricing</a
                   >
                 </li>
                 <li>
-                  <a href="blog.html" data-type="URL" data-id="blog.html"
+                  <a href="team.html" data-type="URL" data-id="team.html"
                     >Blog</a
                   >
                 </li>
