--- a/index-shopassistant.html
+++ b/index-shopassistant.html
@@ -66,13 +66,13 @@
                         <a href="content/shopassistant/about.html"><span lang="menu_second"></span></a>
                       </li>
                       <li>
-                        <a href="content/shopassistant/services.html"><span lang="menu_third"></span></a>
+                        <a href="content/shopassistant/culture.html"><span lang="menu_third"></span></a>
                       </li>
                       <li>
-                        <a href="content/shopassistant/pricing.html"><span lang="menu_fourth"></span></a>
+                        <a href="content/shopassistant/product.html"><span lang="menu_fourth"></span></a>
                       </li>
                       <li>
-                        <a href="content/shopassistant/blog.html"><span lang="menu_fifth"></span></a>
+                        <a href="content/shopassistant/team.html"><span lang="menu_fifth"></span></a>
                       </li>
                       <li>
                         <a href="content/shopassistant/contact.html"><span lang="menu_sixth"></span></a>
@@ -191,7 +191,7 @@
                 <hr class="no_line" style="margin: 0 auto 30px auto" />
                 <hr style="margin: 0 auto 30px; background-color: #e2e2e2" />
                 <h5 lang="home_third_third"></h5>
-                <p lang="home_third_second">
+                <p lang="home_third_second" type="justify">
                 </p>
                 <hr class="no_line" style="margin: 0 auto 15px auto" />
                 <a class="button button_size_2" href="#"><span class="button_label" lang="home_third_first"></span></a>
@@ -207,7 +207,7 @@
                 <hr class="no_line" style="margin: 0 auto 30px auto" />
                 <hr style="margin: 0 auto 30px; background-color: #e2e2e2" />
                 <h5 lang="home_third_fourth"></h5>
-                <p lang="home_third_fifth"></p>
+                <p lang="home_third_fifth" type="justify"></p>
                 <hr class="no_line" style="margin: 0 auto 15px auto" />
                 <a class="button button_size_2" href="#"><span class="button_label" lang="home_third_first"></span></a>
               </div>
@@ -225,7 +225,7 @@
                 <hr class="no_line" style="margin: 0 auto 30px auto" />
                 <hr style="margin: 0 auto 30px; background-color: #e2e2e2" />
                 <h5 lang="home_third_sixth"></h5>
-                <p lang="home_third_seventh"></p>
+                <p lang="home_third_seventh" type="justify"></p>
                 <hr class="no_line" style="margin: 0 auto 15px auto" />
                 <a class="button button_size_2" href="#"><span class="button_label" lang="home_third_first"></span></a>
               </div>
@@ -240,7 +240,7 @@
                 <hr class="no_line" style="margin: 0 auto 30px auto" />
                 <hr style="margin: 0 auto 30px; background-color: #e2e2e2" />
                 <h5 lang="home_third_eighth"></h5>
-                <p lang="home_third_ninth"></p>
+                <p lang="home_third_ninth" type="justify"></p>
                 <hr class="no_line" style="margin: 0 auto 15px auto" />
                 <a class="button button_size_2" href="#"><span class="button_label" lang="home_third_first"></span></a>
               </div>
@@ -828,7 +828,7 @@
                       <span lang="msg_tenth"></span>
                     </div>
                     <div class="column one-second">
-                      XXXXXXX
+                      <span lang="msg_eleventh"></span>
                     </div>
                   </form>
                 </div>
@@ -864,13 +864,13 @@
                 <a href="content/shopassistant/about.html" data-type="URL" data-id="about.html">Product</a>
               </li>
               <li>
-                <a href="content/shopassistant/services.html" data-type="URL" data-id="services.html">Security</a>
+                <a href="content/shopassistant/culture.html" data-type="URL" data-id="culture.html">Security</a>
               </li>
               <li>
-                <a href="content/shopassistant/pricing.html" data-type="URL" data-id="pricing.html">Pricing</a>
+                <a href="content/shopassistant/product.html" data-type="URL" data-id="product.html">Pricing</a>
               </li>
               <li>
-                <a href="content/shopassistant/blog.html" data-type="URL" data-id="blog.html">Blog</a>
+                <a href="content/shopassistant/team.html" data-type="URL" data-id="team.html">Blog</a>
               </li>
               <li>
                 <a href="content/shopassistant/contact.html" data-type="URL" data-id="contact.html">Contact</a>
