--- a/content/shopassistant/post.html
+++ b/content/shopassistant/post.html
@@ -99,18 +99,18 @@
                           ></a>
                         </li>
                         <li>
-                          <a href="services.html"
+                          <a href="culture.html"
                             ><span lang="menu_third"></span
                           ></a>
                         </li>
-                        <li>
-                          <a href="pricing.html"
-                            ><span lang="menu_fourth"></span
+                        <li class="current-menu-item">
+                          <a href="team.html"
+                            ><span lang="menu_fifth"></span
                           ></a>
                         </li>
-                        <li class="current-menu-item">
-                          <a href="blog.html"
-                            ><span lang="menu_fifth"></span
+                        <li>
+                          <a href="product.html"
+                            ><span lang="menu_fourth"></span
                           ></a>
                         </li>
                         <li>
@@ -211,7 +211,7 @@
                         <div
                           class="product-img-image_wrapper"
                           :style="{
-                              'height': `${tabRefWidth-30}px`
+                              'height': `${tabRefWidth-60}px`
                             }"
                         >
                           <img
@@ -232,12 +232,12 @@
         <div
           class="section mcb-section"
           style="
-            margin-top: 100px;
             padding-top: 100px;
             padding-bottom: 60px;
             background-color: #ffcf00;
           "
           data-parallax="3d"
+          lang-style="msg"
         >
           <img
             class="mfn-parallax"
@@ -264,9 +264,8 @@
                       />
                       <hr class="no_line" style="margin: 0 auto 10px auto" />
                       <h2 class="bottom-h2">
-                        您的首选
-                        <br />
-                        跨境合作伙伴
+                        <p lang="msg_first"></p>
+                        <p lang="msg_second"></p>
                       </h2>
                       <img
                         class="scale-with-grid cutting-line"
@@ -275,38 +274,13 @@
                       <hr class="no_line" style="margin: 0 auto 10px auto" />
                       <p class="bottom-text">
                         <span style="color: #12263a">
-                          无论您是需求咨询，还是寻求合作，
-                          <br />
-                          欢迎随时与我们联系,
-                          <br />
-                          期待与您的携手共赢。
+                          <p lang="msg_third"></p>
+                          <p lang="msg_fourth"></p>
+                          <p lang="msg_fifth"></p>
                         </span>
                       </p>
                     </div>
                   </div>
-                  <!-- <div class="col-md-10">
-				<div class="column_attr clearfix" style="
-					  background-color: #ffd830;
-					  background-image: url('images/shopassistant-wrap-bg7.png');
-					  background-repeat: no-repeat;
-					  background-position: left top;
-					  padding: 40px 0 25px 130px;
-					  border-radius: 32px;
-					">
-				  <p style="
-						border-left: solid 1px #eac00b;
-						padding-left: 25px;
-						color: #12263a;
-					  ">
-					<b>John Smith</b> <br />
-					CEO <br />
-					Phone:
-					<a style="color: #12263a" href="tel:+61383766284">+61 3 8376 6284</a>
-					<br />
-					<a style="color: #12263a" href="mail:+noreply@envato.com"><span>noreply@envato.com</span></a>
-				  </p>
-				</div>
-			  </div> -->
                 </div>
               </div>
               <div
@@ -318,53 +292,29 @@
                   border-radius: 32px;
                 "
               >
-                <h4>XXXX联系方式</h4>
+                <h4 lang="msg_sixth"></h4>
                 <div id="contactWrapper">
                   <div id="contactform">
                     <form method="post" id="reused_form">
-                      <div class="column one-second">邮箱：</div>
+                      <div class="column one-second">
+                        <span lang="msg_seventh"></span>
+                      </div>
                       <div class="column one-second">shopeefy36@gmail.com</div>
-                      <div class="column one-second">电话：</div>
+                      <div class="column one-second">
+                        <span lang="msg_eighth"></span>
+                      </div>
                       <div class="column one-second">+86 07906863655</div>
-                      <div class="column one-second">工作时间：</div>
-                      <div class="column one-second">XXXXXXX</div>
-                      <div class="column one-second">地址：</div>
-                      <div class="column one-second">XXXXXXX</div>
+                      <div class="column one-second">
+                        <span lang="msg_ninth"></span>
+                      </div>
+                      <div class="column one-second">8:30~17:30</div>
+                      <div class="column one-second">
+                        <span lang="msg_tenth"></span>
+                      </div>
+                      <div class="column one-second"><span lang="msg_eleventh"></span></div>
                     </form>
                   </div>
                 </div>
-                <!-- <h4>
-			  XXXX联系方式
-			</h4>
-			<div id="contactWrapper">
-			  <div id="contactform">
-				<form method="post" id="reused_form">
-				  <div class="column one-second">
-					邮箱：
-				  </div>
-				  <div class="column one-second">
-					XXXXXXX
-				  </div>
-				  <div class="column one-second">
-					电话：
-				  </div>
-				  <div class="column one-second">
-					XXXXXXX
-				  </div>
-				  <div class="column one-second">
-					地址：
-				  </div>
-				  <div class="column one-second">
-					XXXXXXX
-				  </div>
-				  <div class="column one-second">
-					邮编：
-				  </div>
-				  <div class="column one-second">
-					XXXXXXX
-				  </div>
-				</form>
-			  </div> -->
               </div>
             </div>
           </div>
@@ -401,19 +351,19 @@
                 </li>
                 <li>
                   <a
-                    href="services.html"
+                    href="culture.html"
                     data-type="URL"
-                    data-id="services.html"
+                    data-id="culture.html"
                     >Security</a
                   >
                 </li>
                 <li>
-                  <a href="pricing.html" data-type="URL" data-id="pricing.html"
+                  <a href="product.html" data-type="URL" data-id="product.html"
                     >Pricing</a
                   >
                 </li>
                 <li>
-                  <a href="blog.html" data-type="URL" data-id="blog.html"
+                  <a href="team.html" data-type="URL" data-id="team.html"
                     >Blog</a
                   >
                 </li>
